--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
+    "subscriptions-transport-ws": "^0.9.19",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
